--- a/myweb/app2.html
+++ b/myweb/app2.html
@@ -51,7 +51,7 @@ body
 		</style>
 	</head>
 	<body>
-		<button class="btn"><a class="link" href="https://rooter.app.link/ABaCaFcGN8">Download</a>
+		<button class="btn"><a class="link" href="https://vidab.page.link/6ox8nKSE6Quvkx9d7">Download</a>
 
 			<div>
 				<img class="img" src="arrow.gif">
@@ -61,8 +61,8 @@ body
 			<section>
 
 <p>
-<a href="https://rooter.app.link/ABaCaFcGN8">
-  <img class="img2" src="2.jpg" alt="Cinque Terre" width="200" height="100">
+<a href="https://vidab.page.link/6ox8nKSE6Quvkx9d7">
+  <img class="img2" src="1.jpg" alt="Cinque Terre" width="200" height="100">
 </a>
 </p>
 
